--- a/resources/web.xml
+++ b/resources/web.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-    <!--<servlet>-->
-        <!--<servlet-name>Jersey Morphia Application</servlet-name>-->
-        <!--<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>-->
-    <!--</servlet>-->
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>Jersey Morphia Application</servlet-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-    <!--</servlet-mapping>-->
-
     <servlet>
         <servlet-name>Jersey Morphia Spring Web Application</servlet-name>
         <servlet-class>com.sun.jersey.spi.spring.container.servlet.SpringServlet</servlet-class>
+        <init-param>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>com.thoughtworks.morphia</param-value>
+        </init-param>
     </servlet>
     <servlet-mapping>
         <servlet-name>Jersey Morphia Spring Web Application</servlet-name>
