application.properties file is just a test file for maven properties filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
+# Just a test file for maven filter, not used in any place
 mongodb.server.address=${filtered.mongodb.server.address}
 mongodb.server.port=${filtered.mongodb.server.port}
