--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
     </repositories>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <org.springframework.version>3.0.5.RELEASE</org.springframework.version>
         <env>dev</env>
     </properties>
